@startuml

title __AUTOML.APP's Class Diagram__\n

  namespace com.automl.automl {
    class com.automl.automl.AccountManager {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.BlockView {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.BuildConfig {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.CreateMLModelActivity {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.DatabaseManager {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.FileManager {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.MLModel {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.MainActivity {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.MenuManager {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.MyAccountActivity {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.SelectDADialog {
    }
  }
  

  namespace com.automl.automl {
    class com.automl.automl.SelectMLModelDialog {
    }
  }
  

  namespace com.automl.automl {
    namespace blocks {
      class com.automl.automl.blocks.Block {
      }
    }
  }
  

  com.automl.automl.AccountManager o-- com.automl.automl.DatabaseManager : manager
  com.automl.automl.CreateMLModelActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.automl.automl.CreateMLModelActivity o-- com.automl.automl.AccountManager : accountManager
  com.automl.automl.CreateMLModelActivity o-- com.automl.automl.DatabaseManager : databaseManager
  com.automl.automl.CreateMLModelActivity o-- com.automl.automl.FileManager : fileManager
  com.automl.automl.CreateMLModelActivity o-- com.automl.automl.MenuManager : menuManager
  com.automl.automl.CreateMLModelActivity o-- com.automl.automl.SelectDADialog : selectDADialog
  com.automl.automl.CreateMLModelActivity o-- com.automl.automl.SelectMLModelDialog : selectMLModelDialog
  com.automl.automl.FileManager -up-|> android.os.AsyncTask
  com.automl.automl.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.automl.automl.MainActivity o-- com.automl.automl.AccountManager : accountManager
  com.automl.automl.MainActivity o-- com.automl.automl.MenuManager : menuManager
  com.automl.automl.MyAccountActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.automl.automl.MyAccountActivity o-- com.automl.automl.DatabaseManager : databaseManager
  com.automl.automl.SelectMLModelDialog o-- com.automl.automl.MLModel : mlModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
